Update and rename web design assigment.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
  He was born on 5 February 1985, in Medeira,Portugal.</p>
  
   <figure> 
-    <img src="../medeira.jpg" height="250px" width="250px">
+    <img src="medeira.jpg" height="250px" width="250px">
 	<figcaption>Medeira Portugal</figcaption>
   </figure>
   
